--- a/style.css
+++ b/style.css
@@ -174,3 +174,9 @@ p input:focus {
   margin-bottom: 2rem;
 }
 
+.buttons a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #637C90;
+}
+
